--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core-ktx:1.8.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.8.0-alpha04'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Google团队开发的Material风格的新组件支持库
@@ -151,6 +151,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     //moshi是kotlin专为kotlin设计的json序列化和反序列化框架
 //    implementation 'com.squareup.moshi:moshi:1.12.0'
-//    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
-
+//    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
+    implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
+//    implementation "com.squareup.moshi:moshi:1.13.0"
 }
