--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,6 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+#android.jetifier.ignorelist=moshi-1.13.0
+
 
