--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
     <!--允许程序读取和写入用户的日历信息-->
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <!-- 允许程序访问摄像头 -->
-    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 允许程序访问摄像头,摄像头不是必须的 -->
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="false" />
     <!--联系人-->
     <!--允许程序读取和写入联系人通讯录信息-->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -69,10 +71,13 @@
     <!-- 允许程序读取系统底层日志 -->
     <uses-permission-sdk-23 android:name="android.permission.READ_LOGS" />
 
-    <!--    android:requestLegacyExternalStorage = true:用于给Android10设备停用强制分区储存-->
+    <!--
+        android:requestLegacyExternalStorage = true:用于给Android10设备停用强制分区储存
+        android:allowBackup="true":启动系统备份功能
+    -->
     <application
         android:name=".app.MyApp"
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -186,9 +191,6 @@
 
         <!-- 文件操作页 -->
         <activity android:name=".ui.activity.file.FileOperateActivity" />
-
-        <!-- 权限申请页 -->
-        <activity android:name=".ui.activity.AuthorizedOperationActivity" />
 
         <!-- 通知栏管理页 -->
         <activity android:name=".ui.activity.StatusBarActivity" />
