--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,15 +72,19 @@
     <uses-permission-sdk-23 android:name="android.permission.READ_LOGS" />
     <!-- 允许程序申请安装apk -->
     <uses-permission-sdk-23 android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <!-- 允许程序获取所有的app 信息 -->
+    <uses-permission-sdk-23 android:name="android.permission.QUERY_ALL_PACKAGES" />
+
     <!--
-        android:requestLegacyExternalStorage = true:用于给Android10设备停用强制分区储存
-        android:allowBackup="true":启动系统备份功能
-    -->
+            android:requestLegacyExternalStorage = true:用于给Android10设备停用强制分区储存
+            android:allowBackup="true":启动系统备份功能
+        -->
     <application
         android:name=".app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:manageSpaceActivity=".ui.activity.StorageManagementActivity"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -113,7 +117,6 @@
         <activity
             android:name=".ui.activity.file.FileImageDirectoryActivity"
             android:theme="@style/FileImageAppTheme" />
-        <activity android:name=".ui.activity.DataStoreActivity" />
         <activity android:name=".ui.activity.MotionLayoutActivity" />
         <activity android:name=".ui.activity.NavigationDemoActivity" />
         <activity android:name=".ui.activity.DataBindingActivity" />
@@ -212,20 +215,26 @@
             android:theme="@style/HomeAppTheme">
 
         </activity>
+        <!--    自定义储存管理-->
+        <activity
+            android:name="com.sq26.experience.ui.activity.StorageManagementActivity"
+            android:exported="false"
+
+            />
 
         <!--
-                            下载服务
-                            name :服务所在的位置
-                            process:指定服务运行的进程
-                        -->
+                                下载服务
+                                name :服务所在的位置
+                                process:指定服务运行的进程
+                            -->
         <service
             android:name=".util.network.download.DownloadService"
             android:process=":sq26" />
 
         <!--
-                            跨进程通信服务
-                            需要声明android:exported="true"，这样别的APP才能访问。
-                        -->
+                                跨进程通信服务
+                                需要声明android:exported="true"，这样别的APP才能访问。
+                            -->
         <service
             android:name=".service.AIDLService"
             android:exported="true"
@@ -242,12 +251,12 @@
         </service>
 
         <!--
-                            该provider用于本地文件访问
-                            authorities：是该项目的包名+provider
-                            grantUriPermissions：必须是true，表示授予 URI 临时访问权限
-                            exported：必须是false
-                            resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
-                        -->
+                                该provider用于本地文件访问
+                                authorities：是该项目的包名+provider
+                                grantUriPermissions：必须是true，表示授予 URI 临时访问权限
+                                exported：必须是false
+                                resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
+                            -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.sq26.experience.FileProvider"
@@ -259,17 +268,17 @@
         </provider>
 
         <!--
-                        时钟微件
-                        <receiver> 元素需要 android:name 属性，该属性指定应用微件使用的 AppWidgetProvider。
-                        <intent-filter> 元素必须包含一个具有 android:name 属性的 <action> 元素。
-                            此属性指定 AppWidgetProvider 接受 ACTION_APPWIDGET_UPDATE 广播。
-                            这是您必须明确声明的唯一一项广播。
-                            AppWidgetManager 会根据需要自动将其他所有应用微件广播发送到 AppWidgetProvider。
-                        <meta-data> 元素指定 AppWidgetProviderInfo 资源，并且需要以下属性：
-                            android:name - 指定元数据名称。
-                                使用 android.appwidget.provider 将数据标识为 AppWidgetProviderInfo 描述符。
-                            android:resource - 指定 AppWidgetProviderInfo 资源位置。
-                        -->
+                            时钟微件
+                            <receiver> 元素需要 android:name 属性，该属性指定应用微件使用的 AppWidgetProvider。
+                            <intent-filter> 元素必须包含一个具有 android:name 属性的 <action> 元素。
+                                此属性指定 AppWidgetProvider 接受 ACTION_APPWIDGET_UPDATE 广播。
+                                这是您必须明确声明的唯一一项广播。
+                                AppWidgetManager 会根据需要自动将其他所有应用微件广播发送到 AppWidgetProvider。
+                            <meta-data> 元素指定 AppWidgetProviderInfo 资源，并且需要以下属性：
+                                android:name - 指定元数据名称。
+                                    使用 android.appwidget.provider 将数据标识为 AppWidgetProviderInfo 描述符。
+                                android:resource - 指定 AppWidgetProviderInfo 资源位置。
+                            -->
         <receiver
             android:name="com.sq26.experience.ui.widget.WallpaperWidget"
             android:exported="false"
@@ -285,5 +294,3 @@
 
     </application>
 </manifest>
-
-
