--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,12 @@ plugins {
 //-Dfile.encoding=UTF-8
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId "com.sq26.experience"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -59,7 +59,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
-//        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
 }
 
@@ -69,11 +68,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core-ktx:1.8.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.9.0-alpha03'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Google团队开发的Material风格的新组件支持库
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     //constraintLayout布局控件
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     //RecyclerView控件
@@ -118,7 +117,7 @@ dependencies {
     //Kotlin扩展程序和协同程序对Room的支持
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     // Paging 3 组件(数据分页)
-    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     //navigation组件(fragment管理)
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
@@ -144,14 +143,15 @@ dependencies {
     // CameraX生命周期库
     implementation "androidx.camera:camera-lifecycle:$rootProject.cameraxVersion"
     // CameraX View类
-    implementation "androidx.camera:camera-view:1.1.0-beta01"
+    implementation "androidx.camera:camera-view:1.1.0-rc01"
     // CameraX扩展库
-    implementation "androidx.camera:camera-extensions:1.1.0-beta01"
+    implementation "androidx.camera:camera-extensions:1.1.0-rc01"
     //便捷数据储存,使用键存储和访问数据。此实现不需要预定义的架构，也不确保类型安全。
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     //moshi是kotlin专为kotlin设计的json序列化和反序列化框架
 //    implementation 'com.squareup.moshi:moshi:1.12.0'
-//    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
     implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
 //    implementation "com.squareup.moshi:moshi:1.13.0"
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
