--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     //在单个位置定义版本(以防止某个框架的不同组件版本不同产生异常)
     ext {
         roomVersion = "2.4.2"
-        lifecycleVersion = "2.4.1"
+        lifecycleVersion = "2.5.0"
         hiltVersion = '2.40.1'
-        navigationVersion = "2.4.2"
+        navigationVersion = "2.5.0"
         coroutinesVersion = "1.4.3"
-        cameraxVersion = "1.1.0-rc01"
+        cameraxVersion = "1.2.0-alpha03"
     }
 
     //gradle脚本执行所需依赖，分别是对应的maven库和插件
@@ -26,7 +26,7 @@ buildscript {
         //使用 Safe Args 确保类型安全
         //如需在目的地之间导航，建议使用 Safe Args Gradle 插件。
         // 该插件可以生成简单的对象和构建器类，这些类支持在目的地之间进行类型安全的导航和参数传递。
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
         //Hilt插件, Hilt是 Android 的依赖项注入库，可减少在项目中执行手动依赖项注入的样板代码。
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         // NOTE: Do not place your application dependencies here; they belong
